# blog-writing-agent

./: .env.example  .gitignore  README.md  app.py  pyproject.toml
backend/: app.py  main.py  test.py
backend/core/: settings.py
backend/graph/: builder.py  nodes.py  prompt.py  routers.py
backend/models/: schema.py  state.py
backend/prompts/planner/: system.md
backend/prompts/researcher/: human.md
backend/prompts/router/: system.md
backend/prompts/writer/: human.md  system.md
backend/prompts/writer/v1/: human.md
backend/services/: llm_service.py  web_search_service.py
backend/src/: main.py
backend/src/api/: routers.py
backend/src/api/endpoints/: get_logs.py  health.py  workflow.py
backend/src/api/functions/: get_logs.py  (+2 more)
backend/src/config/: model_config_map.json
backend/src/core/: logging.py  settings.py
backend/src/graph/: builder.py  nodes.py  prompt.py  routers.py
backend/src/models/: schema.py  state.py
backend/src/services/: llm_service.py  web_search_service.py
output/: 1_demystifying_self-attention_the_engine_behind_modern_ai.md  2_deconstructing_self-attention_from_dot-product_intuition_to_scaled_dot-product_implementation.md  3_loop_engineering_the_art_of_building_reliable_agentic_ai.md  4_loop_engineering_in_agentic_ai_from_prompts_to_self-evolving_loops.md  5_model_harness_engineering_building_reliable_ai_agents_in_production.md  6_ai_agent_orchestration_building_with_langgraph_vs._from_scratch.md
src/: main.py
src/config/: model_config_map.json
src/graph/: builder.py  prompt.py
src/services/: llm_service.py
(+4 files in other folders)
