[project]
name = "blog-writing-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "accelerate>=1.14.0",
    "langchain>=1.3.13",
    "langchain-core>=1.4.9",
    "langchain-google-genai>=4.2.7",
    "langchain-huggingface>=1.2.2",
    "langchain-openai>=1.3.5",
    "langchain-openrouter>=0.2.6",
    "langgraph>=1.2.9",
    "pydantic-settings>=2.14.2",
    "torch>=2.13.0",
    "transformers>=5.13.1",
    "uvicorn>=0.51.0",
]
